k8s/05-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: note-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: fhsinchy/notes-client:latest
          ports:
            - containerPort: 8080
          resources: 
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "150Mi"
              cpu: "300m"
